@@ -66,7 +66,7 @@ testTortureExecute (void)
 
   if (ROR (l, SHIFT1) != ROR (LONG_VALUE, SHIFT1))
     ASSERT (0);
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_mcs51) && !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   if (ROR (ll, shift1) != ROR (LL_VALUE, SHIFT1))
     ASSERT (0);
 
